# LibraryMaster

./: .copilotignore  .gitignore  LICENSE  README.md  README_cn.md  fastdds_client.xml.bak  fastdds_disable_shm.xml.bak  frames_2026-06-15_18.26.40.gv  frames_2026-06-16_21.46.03.gv  frames_2026-06-17_09.40.23.gv  frames_2026-06-17_16.53.15.gv
.gitignore/: .gitignore
Embedding/: README.md  start_embedding.sh
Embedding/test/: embed_csv_api.py  embed_csv_sglang.py  llama_cppStart  sglang  sglang_test.py  testapi.py  testapi1.py
Embedding_win/: README.md  llama_cppTest.py  testtable.csv  testtable_with_vector1.csv
Embedding_win/test/: sglang_test.py  test_local.py  testtable_b.csv  testtable_with_vector.csv
car/: README.md  build_embedded.sh  build_pc.sh  start_mycar00.sh
car/docs/: distributed_deployment.md
car/src/: .gitignore  README.md  build.sh  camera_start.sh  cyclonedds_config.xml  frames_2026-05-21_16.50.07.gv  set.sh  start.sh  start_mycar00.sh  start_mycar1.sh  stereo_start.sh
car/src/install/: local_setup.sh  setup.sh
car/src/log/: latest_build
car/src/mycar00/: CMakeLists.txt  README.md  package.xml
car/src/mycar00/launch/: display.launch  gazebo.launch
car/src/mycar00/meshes/: base_link.STL  bl_Link.STL  br_Link.STL  camera_Link.STL  fl_Link.STL  fr_Link.STL
car/src/mycar00/urdf/: mycar00.urdf
car/src/mycar1/: CMakeLists.txt  README.md  package.xml
car/src/mycar1/launch/: display.launch  gazebo.launch
car/src/mycar1/meshes/: base_link.STL  fl_Link.STL  imu_Link.STL
car/src/mycar1/urdf/: mycar1.urdf
car/src/mycar_navigation/: CMakeLists.txt  package.xml
car/src/mycar_navigation/config/: nav2_params.yaml
car/src/mycar_navigation/launch/: navigation_embedded.launch.py
car/src/mycar_slam/: CMakeLists.txt  package.xml
car/src/mycar_slam/config/: slam_mapping.rviz  slam_toolbox_mapping.yaml
car/src/mycar_slam/launch/: slam_pc.launch.py
car/src/py_install/Rosmaster_Lib.egg-info/: PKG-INFO
car/src/robot_localization/: local_setup.sh
car/src/robot_localization/cmake/: export_robot_localization__rosidl_generator_cExport-none.cmake  export_robot_localization__rosidl_generator_pyExport-none.cmake  export_robot_localization__rosidl_typesupport_fastrtps_cExport-none.cmake  export_robot_localization__rosidl_typesupport_fastrtps_cppExport-none.cmake  robot_localizationConfig.cmake  robot_localization__rosidl_typesupport_cExport-none.cmake  robot_localization__rosidl_typesupport_cppExport-none.cmake  robot_localization__rosidl_typesupport_introspection_cExport-none.cmake  robot_localization__rosidl_typesupport_introspection_cppExport-none.cmake
car/src/yahboomcar_base_node/: CMakeLists.txt
car/src/yahboomcar_base_node/src/: base_node_fourwd.cpp
car/src/yahboomcar_bringup/: setup.py
car/src/yahboomcar_bringup/launch/: camera_scan.launch.py  yahboomcar_bringup_mycar00_launch.py  yahboomcar_bringup_mycar1_launch.py
car/src/yahboomcar_bringup/param/: ekf_mycar00.yaml
car/src/yahboomcar_bringup/yahboomcar_bringup/: FourWD_driver.py  calibrate_angular_FourWD.py  calibrate_linear_FourWD.py  patrol_FourWD.py  simple_test.py  test_FourWD.py
docs/: rdk_x5_hdmi_display_setup.md
mycar/: README.md  build.sh  calibrate_and_verify.sh  calibrate_odom.sh  diagnose.sh  run_cam.sh  run_stereo.sh  start_mycar.sh  verify_odom.sh
mycar/config/: fastdds.xml  zenoh_router.json5  zenoh_session.json5
mycar/scripts/: goto.sh  save_waypoint.sh
mycar/src/mycar_driver/: package.xml  setup.cfg  setup.py
mycar/src/mycar_f/: CMakeLists.txt  package.xml
mycar/src/mycar_f/launch/: display.launch.py
mycar/src/mycar_f/meshes/: base_link.STL  fr_Link.STL  imu_Link.STL
mycar/src/mycar_f/urdf/: mycar_f.urdf
mycar/src/mycar_navigation/: package.xml  setup.py
mycar/src/mycar_navigation/config/: nav2_params.yaml  navigation.rviz
mycar/src/mycar_navigation/launch/: navigation.launch.py
mycar/src/mycar_navigation/maps/: mycar_map.pgm  mycar_map.yaml
mycar/src/mycar_navigation/mycar_navigation/: map_keepalive.py  waypoint_saver.py
mycar/src/mycar_rtabmap/: setup.cfg  setup.py
mycar/src/mycar_slam/: CMakeLists.txt  package.xml
mycar/src/mycar_slam/config/: slam_mapping.rviz  slam_toolbox_mapping.yaml
mycar/src/py_install/: API_DOCUMENTATION.md
mycar_pc/: README.md  build.sh  diagnose_topics.py  frames_2026-06-17_11.48.18.gv  start_pc.sh  test_3d_mapping.py  test_3d_mapping.sh
mycar_pc/config/: fastdds.xml
mycar_pc/src/mycar_navigation/: package.xml  setup.py
mycar_pc/src/mycar_navigation/config/: nav_monitor_pc.rviz
mycar_pc/src/mycar_navigation/launch/: nav_monitor_pc.launch.py
mycar_pc/src/mycar_rtabmap/: package.xml  setup.py
mycar_pc/src/mycar_rtabmap/config/: rtabmap.yaml  rtabmap_mapping.rviz  rtabmap_rgbd.yaml  scan_view_pc.rviz  slam_mapping_pc.rviz  slam_toolbox_mapping.yaml
mycar_pc/src/mycar_rtabmap/launch/: rtabmap_mapping_pc.launch.py  rtabmap_rgbd_pc.launch.py  scan_view_pc.launch.py  slam2d_pc.launch.py
mycar_pc/src/mycar_rtabmap/mycar_rtabmap/: image_relay.py  pointcloud_mapper.py  voxel_filter.py
rag/: README.md  docker-compose.yml  dockerfile  start_all.sh  start_rag_api.sh  test_keyword_query.py  test_rag_api.py  test_vector_query.py
rag/data/: testtable_with_vector.csv
rag/docs/: 接口文档.md
rag/src/: input.py  main.py  rag_api.py  test.py  vector_query.py
stereo/: test.sh
voice_agent/: .env.example  .gitignore  Dockerfile  README.md  agent.py  agent_server.py  config.py  docker-compose.yml  export_onnx.py  kiosk.py  kiosk.service  kws_asr_detector.py  kws_wakeup.py  llm.py  main.py  requirements-host.txt  requirements.txt  start_voice_agent.sh  test_asr_api.py  test_mic.py  tools.py  weston.ini  xunfei_asr.py  xunfei_tts.py
voice_agent/app/: Dockerfile  agent.py  agent_server.py  llm.py  requirements.txt  tools.py
voice_agent/app/static/: index.html
voice_agent/deploy/: deploy-kiosk.sh
voice_agent/outputs/kws_debug/: detect
voice_agent/src/: kws_asr_detector.py  kws_service.py  kws_wakeup.py  test_asr_api.py  voice_relay.py  xunfei_asr.py  xunfei_tts.py
(+43 files in other folders)
