<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mycar_rtabmap</name>
  <version>0.1.0</version>
  <description>mycar RTAB-Map 3D mapping with point cloud downsampling for embedded performance</description>
  <maintainer email="user@todo.com">user</maintainer>
  <license>BSD</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>rtabmap_slam</depend>
  <depend>rtabmap_util</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
